apps/cooklang/ingress-novnc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cooklang-novnc
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: cooklang-vnc.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cooklang-novnc
                port:
                  number: 6080
  tls:
    - hosts:
        - cooklang-vnc.homelab
      secretName: cooklang-vnc-tls
