apps/cooklang/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cooklang
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: cooklang.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cooklang
                port:
                  number: 9080
  tls:
    - hosts:
        - cooklang.homelab
      secretName: cooklang-tls
